spring-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.37.0 (fb0539e64)
  labels:
    io.kompose.service: spring-app
  name: spring-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: spring-app
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.37.0 (fb0539e64)
      labels:
        io.kompose.service: spring-app
    spec:
      containers:
        - image: felipecantotrevisol/spring-app:latest
          name: spring-app
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
